--- a/index.html
+++ b/index.html
@@ -6,9 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>forid adrian</h1>
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facilis dolor ducimus accusamus quisquam debitis voluptate possimus enim. Vel voluptates aut blanditiis incidunt.</p>
-
-    <p>Forid Adrian ,i changed in website</p>
+    <h1>Kurupx</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum, ipsa</p>
+    
 </body>
 </html>
